Add link to page source

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <div class="card-body">
             <a href="TODO" role="button" class="btn btn-secondary btn-lg btn-block">video (pending)</a>
             <a href="https://docs.google.com/presentation/d/1478HFPnPagLEHgZ6Xz2mNL287_hKwiSSTG2YkLsg6Dw/edit?usp=sharing" role="button" class="btn btn-secondary btn-lg btn-block">slides</a>
+            <a href="https://github.com/mmore500/cse-812-paper-presentation" role="button" class="btn btn-secondary btn-lg btn-block">page source</a>
           </div>
         </div>
       </div>
